derive/tests/snapshots/foreign_key_and_referenced_by/Inspection/execute_on_delete_strategies_of_the_inspection_table_after_one_row_of_the_warehouse_table_was_deleted.snap
---
source: derive/src/characterization_tests.rs
---
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `inspection` after one row of the referenced table `warehouse` was deleted.
    pub fn execute_on_delete_strategies_of_the_inspection_table_after_one_row_of_the_warehouse_table_was_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_of_another_table_to_delete: &u64,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_warehouse_table_has_no_referenced_by_attribute_referencing_the_inspection_table;
        use ::spacetimedsl::itertools::Itertools;
        let mut entries = vec![];
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {
                    for mut row in dsl
                        .db()
                        .inspection()
                        .warehouse_id()
                        .filter(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        row.warehouse_id = 0;
                        let child_entries = vec![];
                        let id = &row.id;
                        entries
                            .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                table_name: "inspection".into(),
                                column_name: "warehouse_id".into(),
                                strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SetZero,
                                row_value: format!("{}", InspectionId::new(id.clone()))
                                    .into(),
                                child_entries,
                            });
                        dsl.db().inspection().id().update(row);
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}
