derive/tests/snapshots/foreign_key_and_referenced_by/Inspection/get_all_inspections.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `inspection` table.
    pub fn get_all_inspections<'a>(&'a self) -> impl Iterator<Item = Inspection> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().inspection().iter()
    }
}
