derive/tests/snapshots/foreign_key_and_referenced_by/Inspection/get_inspections_by_warehouse_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Inspection` iterator that contains all rows in the `inspection` table whose value matches the value from the single-column btree index on the `warehouse_id` column.
    pub fn get_inspections_by_warehouse_id<'a>(
        &'a self,
        warehouse_id: impl Into<WarehouseId>,
    ) -> impl Iterator<Item = Inspection> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().inspection().warehouse_id().filter(warehouse_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Inspection` iterator that contains all rows in the `inspection` table whose value matches the value from the single-column btree index on the `warehouse_id` column.
    pub fn get_inspections_by_warehouse_id<'a>(
        &'a self,
        warehouse_id: impl Into<WarehouseId>,
    ) -> impl Iterator<Item = Inspection> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().inspection().warehouse_id().filter(warehouse_id.into().value())
    }
}
