derive/tests/snapshots/foreign_key_and_referenced_by/Inspection/table.snap
---
source: derive/src/characterization_tests.rs
---
pub trait this_compilation_error_occurs_because_the_inspection_table_has_no_foreign_key_attribute_with_on_delete_defined_referencing_the_warehouse_table {}
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct InspectionId {
    value: u64,
}
impl Default for InspectionId {
    fn default() -> InspectionId {
        InspectionId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for InspectionId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "InspectionId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64, InspectionId> for InspectionId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Inspection> for InspectionId {
    fn from(value: &Inspection) -> Self {
        InspectionId {
            value: value.id.clone(),
        }
    }
}
impl From<&Inspection> for Option<InspectionId> {
    fn from(value: &Inspection) -> Option<InspectionId> {
        Some(InspectionId {
            value: value.id.clone(),
        })
    }
}
impl From<&InspectionId> for Option<InspectionId> {
    fn from(value: &InspectionId) -> Option<InspectionId> {
        use crate::spacetimedsl::Wrapper;
        Some(InspectionId::new(value.value()))
    }
}
impl From<&InspectionId> for InspectionId {
    fn from(value: &InspectionId) -> Self {
        use crate::spacetimedsl::Wrapper;
        InspectionId::new(value.value())
    }
}
impl Inspection {
    ///
    pub fn get_id(&self) -> InspectionId {
        use crate::spacetimedsl::Wrapper;
        InspectionId::new(self.id.clone())
    }
    ///
    pub fn get_warehouse_id(&self) -> WarehouseId {
        use crate::spacetimedsl::Wrapper;
        WarehouseId::new(self.warehouse_id.clone())
    }
    ///
    pub fn set_warehouse_id(
        &mut self,
        warehouse_id: impl Into<WarehouseId>,
    ) -> WarehouseId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(
            &mut self.warehouse_id,
            warehouse_id.into().value(),
        );
        WarehouseId::new(old_value)
    }
}
///
pub struct CreateInspection {
    pub warehouse_id: WarehouseId,
}

// Generated DSL methods:
// count_of_all_inspections
// create_inspection
// delete_inspection_by_id
// delete_inspections_by_warehouse_id
// execute_on_delete_strategies_of_the_inspection_table_after_multiple_rows_of_the_warehouse_table_were_deleted
// execute_on_delete_strategies_of_the_inspection_table_after_one_row_of_the_warehouse_table_was_deleted
// get_all_inspections
// get_inspection_by_id
// get_inspections_by_warehouse_id
// update_inspection_by_id
